--- a/provas2019-2.html
+++ b/provas2019-2.html
@@ -19,8 +19,8 @@
          <script>
             function TesteSoftware(){
                 alert(
-                    "Avaliação 1: 27/09\n\
-		     Avaliação 2: 29/11\n\
+                    "Avaliação 1: 27/09\n
+		     Avaliação 2: 29/11\n
 		     Avaliaçõ sub: 06/12"
                       );
                 }
@@ -30,7 +30,7 @@
         <script>
             function ProgramacaoWebII(){
                 alert(
-                    "Projeto 1: 17/10\n\
+                    "Projeto 1: 17/10\n
 		     Projeto 2: 10/12"
                       );
                 }
@@ -49,9 +49,9 @@
         <script>
             function DesenvolvimentoDeJogos(){
                 alert(
-                    "Projeto   1: 14/10\n\
-		     Avaliação 1: 16/10\n\
-                     Avaliação 2: 11/12\n\
+                    "Projeto   1: 14/10\n
+		     Avaliação 1: 16/10\n
+                     Avaliação 2: 11/12\n
                      Projeto   2: 16/12"
                       );
                 }
@@ -79,10 +79,10 @@
         <script>
             function TeoriaComp(){
                     alert(
-                        "Avaliação 1: 04/10  p1 peso 4,5\n\
-                        Apresentação trabalho: 06/10  trabalho peso 2\n\
-                        Avaliação 2: 06/10  p2 peso 4,5\n\
-                        Substitutiva: dia  psub substitui a menor nota"
+                        "Avaliação 1: 04/10  p1 peso 4,5\n
+                         Apresentação trabalho: 06/10  trabalho peso 2\n
+                         Avaliação 2: 06/10  p2 peso 4,5\n
+                         Substitutiva: dia  psub substitui a menor nota"
                     );
                 }
         </script>
