--- a/aulas-2019-2.html
+++ b/aulas-2019-2.html
@@ -223,5 +223,75 @@
    				</tr>
 		</div>		 
    	</table>
+	 <table style="width:100%">
+             <div class="container">
+                <table class="table table-striped table-bordered table-condensed table-hover">
+                    <thead>
+                        <tr>
+                            <th>Inicio</th>
+                            <th>Término</th>
+                            <th>Segunda</th>
+                            <th>Terça</th> 
+                            <th>Quarta</th>
+                            <th>Quinta</th>
+                            <th>Sexta</th>
+                        </tr>
+                    </thead>
+                    <tr>
+                        <td>18:40</td>
+                        <td>19:00</td>
+                        <td>P</td>
+                        <td>P</td>
+                        <td>P</td>
+                        <td>GPS K008</td>
+                        <td>--------</td>
+                    </tr>
+                    <tr>
+                        <td>19:30</td>
+                        <td>20:20</td>
+                        <td>Paluno</td>
+                        <td>P</td>
+                        <td>P</td>
+                        <td>GPS K008</td>
+                        <td>--------</td>
+                    </tr>
+                    <tr>
+                        <td>20:20</td>
+                        <td>21:10</td>
+                        <td>Paluno</td>
+                        <td>P</td>
+                        <td>P</td>
+                        <td>GPS K008</td>
+                        <td>--------</td>
+                    </tr>
+                    <tr>
+                        <td>21:10</td>
+                        <td>21:20</td>
+                        <td><b>Intervalo</b></td>
+                        <td><b>Intervalo</b></td>
+                        <td><b>Intervalo</b></td>
+                        <td><b>Intervalo</b></td>
+                        <td><b>Intervalo</b></td>
+                    </tr>
+                    <tr>
+                        <td>21:20</td>
+                        <td>22:10</td>
+                        <td>GPS K008</td>
+                        <td>GPS P105</td>
+                        <td>P</td>
+                        <td>GPS P105</td>
+                        <td>--------</td>
+                    </tr>
+                    <tr>
+                        <td>22:10</td>
+                        <td>23:00</td>
+                        <td>GPS K008</td>
+                        <td>GPS P105</td>
+                        <td>P</td>
+                        <td>GPS 105</td>
+                        <td>-------</td>
+                    </tr>
+                </div>
+            </table>
 </body>
 </html>
