--- a/provas2019-2.html
+++ b/provas2019-2.html
@@ -19,7 +19,7 @@
          <script>
             function TesteSoftware(){
                 alert(
-                    "Avaliação 1: 27/09\n
+                    "Avaliação 1: 18/10\n
 		     Avaliação 2: 29/11\n
 		     Avaliaçõ sub: 06/12"
                       );
@@ -49,10 +49,13 @@
         <script>
             function DesenvolvimentoDeJogos(){
                 alert(
-                    "Projeto   1: 14/10\n
-		     Avaliação 1: 16/10\n
+                    "Projeto   1: 23/09\n
+		     Projeto   2: 25/09\n
+                     Avaliação 1: 16/10\n
                      Avaliação 2: 11/12\n
-                     Projeto   2: 16/12"
+		     Avaliação Sub:18/12\n
+		     Projeto Final: 02-11/12\n
+		     Apresentação Projeto: 16/12"	
                       );
                 }
         </script>
@@ -70,7 +73,11 @@
         <script>
             function EstrturadeDados(){
                 alert(
-                    "A definir"
+                    "Trabalho 1: 13/09\n
+		     Trabalho 2: 27/09\n
+		     Prova P1:   04/10\n
+		     Prova P2:   29/11\n
+		     Trabalho:   05-06/12"
                       );
                 }
         </script>
@@ -79,10 +86,10 @@
         <script>
             function TeoriaComp(){
                     alert(
-                        "Avaliação 1: 04/10  p1 peso 4,5\n
-                         Apresentação trabalho: 06/10  trabalho peso 2\n
-                         Avaliação 2: 06/10  p2 peso 4,5\n
-                         Substitutiva: dia  psub substitui a menor nota"
+                        "Avaliação 1: 17/10  p1 peso 4,5\n
+                         Apresentação trabalho: 06/12  trabalho peso 1\n
+                         Avaliação 2: 06/12  p2 peso 4,5\n
+                         Substitutiva: 12/12"
                     );
                 }
         </script>
@@ -170,14 +177,6 @@
                     </tr>
                 </thead>
                 <tbody>
-                <div class="container">
-                    <tr>
-                        <td><s>19/03</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Escolher qual o tema do projeto">Tema projeto</a></s></td>
-                        <td><s>Programação Distribuída</s></td>
-                        <td><s></s></td>
-                    </tr>
-                    </div>
 	        <div class="container">
                     <tr>
                         <td><s>13/09</s></td>
@@ -185,179 +184,175 @@
                         <td><s>Estrutura de Dados</s></td>
                         <td><s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>23/09</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Projeto 1</a></s></td>
                         <td><s>Desenvolvimento de Jogos</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>25/09</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Projeto 1</a></s></td>
                         <td><s>Desenvolvimento de Jogos</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>27/09</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Trabalho 2</a></s></td>
                         <td><s>Estrutura de Dados</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>04/10</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="ED Tipos de dados abstratos (TAD) – Pilha, fila e listas">Prova P1</a></s></td>
                         <td><s>Estrutura de Dados</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>16/10</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P1</a></s></td>
                         <td><s>Desenvolvimento de Jogos</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>17/10</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Projeto 1</a></s></td>
                         <td><s>Programação Web 2</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>17/10</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P1</a></s></td>
                         <td><s>Teoria da Computação</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>18/10</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P1</a></s></td>
                         <td><s>Desenvolvimento de Teste</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>29/11</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P2</a></s></td>
                         <td><s>Desenvolvimento de Teste</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>29/11</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Métodos de ordenação e busca – Árvores">Prova P2</a></s></td>
                         <td><s>Estrutura de Dados</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>17/10</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P2</a></s></td>
                         <td><s>Teoria da Computação</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>02/12</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Projeto Jogos</a></s></td>
                         <td><s>Desenvolvimento de Jogos</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>05/12</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Trabalho Prático</a></s></td>
                         <td><s>Estrutura de Dados</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>06/12</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Trabalho escrito</a></s></td>
                         <td><s>Teoria da Computação</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>06/12</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova Substitutiva</a></s></td>
                         <td><s>Desenvolvimento de Teste</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>06/12</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Trabalho Prático</a></s></td>
                         <td><s>Estrutura de Dados</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>10/12</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Projeto 2</a></s></td>
                         <td><s>Programação Web 2</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>11/12</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P2</a></s></td>
                         <td><s>Desenvolvimento de Jogos</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>12/12</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Todo Conteúdo do Semestre">Prova Substitutiva</a></s></td>
                         <td><s>Teoria da Computação</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>16/12</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Apresentação projeto Jogos</a></s></td>
                         <td><s>Desenvolvimento de Jogos</s></td>
-                        <td><s></s></td>
+                        <td></s></s></td>
                     </tr>
-</div>
-<div class="container">
+		</div>
+		<div class="container">
                     <tr>
                         <td><s>18/12</s></td>
                         <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova Substitutiva</a></s></td>
                         <td><s>Desenvolvimento de Jogos</s></td>
                         <td><s></s></td>
                     </tr>
-</div>
-
-
+		</div>
                    </tbody>
                 </div>
             </table>
