--- a/provas2019-2.html
+++ b/provas2019-2.html
@@ -19,9 +19,9 @@
          <script>
             function TesteSoftware(){
                 alert(
-                    "Avaliação 1: 18/10\n
-		     Avaliação 2: 29/11\n
-		     Avaliaçõ sub: 06/12"
+                    "Avaliação 1: 18/10\n"
+		     "Avaliação 2: 29/11\n"
+		     "Avaliação sub: 06/12"
                       );
                 }
         </script>
