--- a/provas2019-2.html
+++ b/provas2019-2.html
@@ -49,13 +49,7 @@
         <script>
             function DesenvolvimentoDeJogos(){
                 alert(
-                    "Projeto   1: 23/09\n
-		     Projeto   2: 25/09\n
-                     Avaliação 1: 16/10\n
-                     Avaliação 2: 11/12\n
-		     Avaliação Sub:18/12\n
-		     Projeto Final: 02-11/12\n
-		     Apresentação Projeto: 16/12"	
+                    "Projeto   1: 23/09\nProjeto   2: 25/09\nAvaliação 1: 16/10\nAvaliação 2: 11/12\nAvaliação Sub:18/12\nProjeto Final: 02-11/12\nApresentação Projeto: 16/12"	
                       );
                 }
         </script>
@@ -211,145 +205,145 @@
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>04/10</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="ED Tipos de dados abstratos (TAD) – Pilha, fila e listas">Prova P1</a></s></td>
-                        <td><s>Estrutura de Dados</s></td>
+                        <td></s>04/10</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="ED Tipos de dados abstratos (TAD) – Pilha, fila e listas">Prova P1</a></s></td>
+                        <td></s>Estrutura de Dados</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>16/10</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P1</a></s></td>
-                        <td><s>Desenvolvimento de Jogos</s></td>
+                        <td></s>16/10</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P1</a></s></td>
+                        <td></s>Desenvolvimento de Jogos</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>17/10</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Projeto 1</a></s></td>
-                        <td><s>Programação Web 2</s></td>
+                        <td></s>17/10</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Projeto 1</a></s></td>
+                        <td></s>Programação Web 2</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>17/10</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P1</a></s></td>
-                        <td><s>Teoria da Computação</s></td>
+                        <td></s>17/10</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P1</a></s></td>
+                        <td></s>Teoria da Computação</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>18/10</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P1</a></s></td>
-                        <td><s>Desenvolvimento de Teste</s></td>
+                        <td></s>18/10</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P1</a></s></td>
+                        <td></s>Desenvolvimento de Teste</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>29/11</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P2</a></s></td>
-                        <td><s>Desenvolvimento de Teste</s></td>
+                        <td></s>29/11</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P2</a></s></td>
+                        <td></s>Desenvolvimento de Teste</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>29/11</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Métodos de ordenação e busca – Árvores">Prova P2</a></s></td>
-                        <td><s>Estrutura de Dados</s></td>
+                        <td></s>29/11</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Métodos de ordenação e busca – Árvores">Prova P2</a></s></td>
+                        <td></s>Estrutura de Dados</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>17/10</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P2</a></s></td>
-                        <td><s>Teoria da Computação</s></td>
+                        <td></s>17/10</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P2</a></s></td>
+                        <td></s>Teoria da Computação</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>02/12</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Projeto Jogos</a></s></td>
-                        <td><s>Desenvolvimento de Jogos</s></td>
+                        <td></s>02/12</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Projeto Jogos</a></s></td>
+                        <td></s>Desenvolvimento de Jogos</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>05/12</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Trabalho Prático</a></s></td>
-                        <td><s>Estrutura de Dados</s></td>
+                        <td></s>05/12</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Trabalho Prático</a></s></td>
+                        <td></s>Estrutura de Dados</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>06/12</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Trabalho escrito</a></s></td>
-                        <td><s>Teoria da Computação</s></td>
+                        <td></s>06/12</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Trabalho escrito</a></s></td>
+                        <td></s>Teoria da Computação</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>06/12</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova Substitutiva</a></s></td>
-                        <td><s>Desenvolvimento de Teste</s></td>
+                        <td></s>06/12</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova Substitutiva</a></s></td>
+                        <td></s>Desenvolvimento de Teste</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>06/12</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Trabalho Prático</a></s></td>
-                        <td><s>Estrutura de Dados</s></td>
+                        <td></s>06/12</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Trabalho Prático</a></s></td>
+                        <td></s>Estrutura de Dados</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>10/12</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Projeto 2</a></s></td>
-                        <td><s>Programação Web 2</s></td>
+                        <td></s>10/12</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Projeto 2</a></s></td>
+                        <td></s>Programação Web 2</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>11/12</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P2</a></s></td>
-                        <td><s>Desenvolvimento de Jogos</s></td>
+                        <td></s>11/12</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P2</a></s></td>
+                        <td></s>Desenvolvimento de Jogos</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>12/12</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Todo Conteúdo do Semestre">Prova Substitutiva</a></s></td>
-                        <td><s>Teoria da Computação</s></td>
+                        <td></s>12/12</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="Todo Conteúdo do Semestre">Prova Substitutiva</a></s></td>
+                        <td></s>Teoria da Computação</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>16/12</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Apresentação projeto Jogos</a></s></td>
-                        <td><s>Desenvolvimento de Jogos</s></td>
+                        <td></s>16/12</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Apresentação projeto Jogos</a></s></td>
+                        <td></s>Desenvolvimento de Jogos</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
 		<div class="container">
                     <tr>
-                        <td><s>18/12</s></td>
-                        <td><s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova Substitutiva</a></s></td>
-                        <td><s>Desenvolvimento de Jogos</s></td>
+                        <td></s>18/12</s></td>
+                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova Substitutiva</a></s></td>
+                        <td></s>Desenvolvimento de Jogos</s></td>
                         <td><s></s></td>
                     </tr>
 		</div>
