--- a/provas2019-2.html
+++ b/provas2019-2.html
@@ -71,7 +71,7 @@
         
         <!--Estrutura de Dados-->
         <script>
-            function EstrturadeDados(){
+            function EstruturaDeDados(){
                 alert(
                     "Trabalho 1: 13/09\n
 		     Trabalho 2: 27/09\n
@@ -154,7 +154,7 @@
                 </tr>
                <tr>
                     <td>SO33A</td>
-                    <td><button type="button" class="btn btn-danger onclick="EstrturadeDados()">Estrutura de Dados</button></td>
+                    <td><button type="button" class="btn btn-danger onclick="EstruturaDeDados()">Estrutura de Dados</button></td>
                     <td>SPO1</td>
                     <td>5</td>
                </tr>
