--- a/provas2019-2.html
+++ b/provas2019-2.html
@@ -410,24 +410,15 @@
                         <td></s></s></td>
                     </tr>
 		</div>
-			    
-		<div class="container">
-                    <tr>
-                        <td></s>06/12</s></td>
-                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Trabalho Teórico</a></s></td>
-                        <td></s>Estrutura de Dados</s></td>
-                        <td></s></s></td>
-                    </tr>
-		</div>
 
 		<div class="container">
                     <tr>
-                        <td></s>09/12</s></td>
+                        <td></s>06/12</s></td>
                         <td></s><a href="#" title="Realize uma pesquisa sobre árvores AVL e a estrutura de dados hash
 						   Faça uma breve introdução de cada tópico, aplicações, principais funções e exemplos.
 						   Por fim, o trabalho deverá ter uma conclusão pessoal, contextualizando ambos os assuntos com os demais conteúdos da disciplina.
-						   Obs: trabalhos duplicados serão zerados." data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Projeto Jogos</a></s></td>
-                        <td></s>Desenvolvimento de Jogos</s></td>
+						   Obs: trabalhos duplicados serão zerados." data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Trabalho Teórico</a></s></td>
+                        <td></s>Estrutura de Dados</s></td>
                         <td></s></s></td>
                     </tr>
 		</div>
