--- a/provas2019-2.html
+++ b/provas2019-2.html
@@ -348,7 +348,7 @@
 		<div class="container">
                     <tr>
                         <td></s>05/12</s></td>
-                        <td></s><a href="#" title="Detalhes" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P2</a></s></td>
+                        <td></s><a href="#" title="Problemas P e NP, Máquina de Turing, Chomsky" data-toggle="popover" data-trigger="hover" data-html="true" data-content="">Prova P2</a></s></td>
                         <td></s>Teoria da Computação</s></td>
                         <td></s></s></td>
                     </tr>
