--- a/provas2019-2.html
+++ b/provas2019-2.html
@@ -27,14 +27,14 @@
         </script>
 	    
 	<!--Programação Web II-->
-        <script>
+	<script>
             function ProgramacaoWebII(){
                 alert(
-                    "Projeto 1: 17/10\n
-		     Projeto 2: 10/12"
+                    "Projeto 1: 17/10\n Projeto 2: 10/12 "
                       );
                 }
-        </script>
+        </script>    
+       
 	
 	<!--Trabalho de Conclusão de Curso I-->
 	<script>
